--- a/docs/eap7-openshift.adoc
+++ b/docs/eap7-openshift.adoc
@@ -187,6 +187,8 @@ build:
       value: "cloud-server,ejb,postgresql-datasource,web-clustering"
     - name: POSTGRESQL_DRIVER_VERSION
       value: 42.6.0
+    - name: MAVEN_MIRROR_URL
+      value: http://nexus.lab-infra.svc.cluster.local:8081/repository/maven-all-public/
   triggers: {}
   s2i:
     version: latest
